<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.stealthmate.home.pcvolcontrol.MainActivity"
    tools:showIn="@layout/activity_main">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true">

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="0.3"
                android:orientation="vertical"
                android:layout_gravity="left">

                <Button
                    android:id="@+id/btnconn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:textSize="11sp"
                    android:onClick="connect"
                    android:text="@string/btn_connect_text"/>

                <Button
                    android:id="@+id/btndisc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="11sp"
                    android:onClick="disconnect"
                    android:text="@string/btn_disconnect_text"/>

            </LinearLayout>

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="0.3"
                android:layout_gravity="center"
                android:orientation="vertical">
                <Button
                    android:id="@+id/btnnext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="11sp"
                    android:onClick="next"
                    android:text="@string/btn_next_text"/>

                <Button
                    android:id="@+id/btnprev"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="11sp"
                    android:layout_gravity="center"
                    android:onClick="prev"
                    android:text="@string/btn_prev_text"/>
            </LinearLayout>

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="0.3"
                android:layout_gravity="right"
                android:orientation="vertical">
                <Button
                    android:id="@+id/btnplayt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="11sp"
                    android:onClick="play"
                    android:text="@string/btn_play_text"/>

                <Button
                    android:id="@+id/btnstop"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="11sp"
                    android:onClick="stop"
                    android:text="@string/btn_stop_text"/>
            </LinearLayout>

        </LinearLayout>

        <SeekBar
            android:id="@+id/SETTING_BAR"
            android:layout_width="match_parent"
            android:minHeight="30dip"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:thumb="@drawable/seek_thumb"/>

    </RelativeLayout>
</RelativeLayout>
